@@ -1,4 +1,6 @@
-
+2012-03-30 Andrea Del Prete <andrea.delprete@iit.it>
+       * iKinFwd.cpp/h: add method DJacobian that computes the time derivative of
+                        the geometric jacobian
 2011-03-04 Ugo Pattacini <ugo.pattacini@iit.it>
 	   * Structure prepared for dealing with head v2
 
